--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -356,7 +356,10 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
-          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong> Acoustic Analysis Methodology</strong></h4>
+          <div class="title">
+            <span class="num mbr-fonts-style display-1"><strong>01.</strong></span>
+          </div>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Acoustic Analysis Methodology</strong></h4>
         </div>
       </div>
     </div>
@@ -425,18 +428,12 @@
     </div>
   </section>
 
-
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stage1">
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-8">
-          <h3>Stage 1: Acoustic Fingerprint of the Vehicle</h3>
-          <br>
-          <p class="mbr-text mbr-fonts-style display-7">
-            During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ and open road sounds of the vehicle.
-            Specifing the targets of those captures is essential to guarantee a smooth and on focus study during the stage 2.
-          </p>
+        <div class="title col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Acoustic Fingerprint of the Vehicle</strong></h4>
         </div>
       </div>
     </div>
@@ -499,33 +496,6 @@
     <div class="align-center container">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-8">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="multi_rec_sol">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-8">
-          <h5>Multichannel Recording Solutions</h5>
-          <br>
-          <p class="mbr-text mbr-fonts-style display-7">
-            Multichannel solutions have been developed over the years that can be categorized in three approaches:
-            <br>
-            <br>
-          <ul class="mbr-text mbr-fonts-style display-7">
-            <li><b>Direct:</b> those methods are the most commonly used by sound engineers and consist in manually arranging microphones and loudspeakers based on heuristics. Those methods will not be further detailed here because microphone and
-              loudspeaker layouts are interdependent.</li>
-            <li><b>Non-parametric:</b> those methods usually use linear transformation such as ambisonic. Input channels are encoded in the spherical harmonic domain and can further be decoded on any loudspeaker configuration</li>
-            <li><b>Parametric:</b> those methods process microphone array signals in the time-frequency domain and estimate spatial parameters based on sound field models. Parametric techniques are mainly used in spatial audio coding because they
-              allow to downmix the recordings and achieve good perceptual reconstruction.</li>
-          </ul>
-          <p class="mbr-text mbr-fonts-style display-7">
-            Choosing which recording method to apply over each target is crucial.
-            A good soundscape capture is based over a mix and match of different recording methods.
-          </p>
         </div>
       </div>
     </div>
