--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -111,6 +111,7 @@
               <li><a href="#pre"><b>Pre. Project Strategy Design</b></a></li>
               <ul>
                 <li><a href="#targets"><b>Definition of Automotive Sound Targets</b></a></li>
+                <li><a href="#targets"><b>Acoustic Analysis Methodology</b></a></li>
                 <li><a href="#ir"><b>Impulse Response Positions and Conditions</b></a></li>
               </ul>
               <li><a href="#stage1"><b>01. Acoustic Fingerprint of the Vehicle</b></a></li>
