--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -432,16 +432,16 @@
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
           <div class="title">
-            <span class="num mbr-fonts-style display-1"><strong>01.</strong></span>
+            <span class="num mbr-fonts-style display-1"><strong>01. Acoustic Fingerprint of the Vehicle</strong></span>
           </div>
-          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Acoustic Fingerprint of the Vehicle</strong></h4>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Multichannel Recording Solutions</strong></h4>
         </div>
       </div>
     </div>
   </section>
 
   <!-- List-->
-  <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX1" id="features2-i">
+  <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX" id="features2-i">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-md-6 col-lg-3">
