--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -448,7 +448,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/1d.svg" style="width:70%; display: inline; align-items: center">
+                <img src="https://www.gabrielavelitch.com/img/site/empiric.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Directs</strong>
@@ -463,7 +463,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/2d.svg" style="width:70%; display: inline; align-items: center">
+                <img src="https://www.gabrielavelitch.com/img/site/array.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Parametric</strong>
@@ -478,7 +478,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/3d.svg" style="width:70%; display: inline; align-items: center">
+                <img src="https://www.gabrielavelitch.com/img/site/ambix.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Non-parametric</strong>
