--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -454,7 +454,7 @@
                 <strong>Directs</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
-                Manually arranging microphones and loudspeakers based on heuristics. Those methods will not be further detailed here because microphone and loudspeaker layouts are interdependent
+                Manually arranging setup based on heuristics. Those methods will not be further detailed because microphone and loudspeaker layouts are interdependent
               </p>
             </div>
           </div>
