--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -378,6 +378,8 @@
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
                 Method applies to simple systems such as string, pipe or walls
+                <br>
+                <br>
               </p>
             </div>
           </div>
@@ -393,6 +395,8 @@
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
                 Propagation of the acoustic field is treated as if it were governed by rays
+                <br>
+                <br>
               </p>
             </div>
           </div>
@@ -454,7 +458,7 @@
                 <strong>Directs</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
-                Manually arranging setup based on heuristics. Those methods will not be further detailed because microphone and loudspeaker layouts are interdependent
+                Manually arranging the setup based on heuristics. Those methods will not be further detailed because microphone and loudspeaker layouts are interdependent
               </p>
             </div>
           </div>
