--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -488,7 +488,7 @@
                 <strong>Non-parametric</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
-                Linear transformation such as ambisonic. Input channels are encoded in the spherical harmonic domain and can further be decoded on any loudspeaker configuration </p>
+                Linear transformation such as ambisonic. Input channels are encoded in the spherical harmonic</p>
             </div>
           </div>
         </div>
