--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -438,7 +438,6 @@
           <div class="title">
             <span class="num mbr-fonts-style display-1"><strong>01. Acoustic Fingerprint of the Vehicle</strong></span>
           </div>
-          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Multichannel Recording Solutions</strong></h4>
         </div>
       </div>
     </div>
@@ -449,6 +448,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-md-6 col-lg-3">
+          <h4 style="color: #ffffff" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Multichannel Recording Solutions</strong></h4>
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
