--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -447,8 +447,11 @@
   <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX" id="features2-i">
     <div class="container">
       <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <span>
+            <h4 style="color: #ffffff" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Multichannel Recording Solutions</strong></h4>
+          </span>
         <div class="col-12 col-md-6 col-lg-3">
-          <h4 style="color: #ffffff" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Multichannel Recording Solutions</strong></h4>
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
