--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -435,7 +435,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
-          <div class="title">
+          <div class="subtitle">
             <span class="num mbr-fonts-style display-1"><strong>01. Acoustic Fingerprint of the Vehicle</strong></span>
           </div>
         </div>
@@ -451,6 +451,7 @@
           <span>
             <h4 style="color: #ffffff" class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Multichannel Recording Solutions</strong></h4>
           </span>
+        </div>
         <div class="col-12 col-md-6 col-lg-3">
           <div class="card-wrapper">
             <div class="card-box align-center">
