--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -434,10 +434,9 @@
   <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="title col-md-12 col-lg-10">
-          <div class="subtitle">
-            <span class="num mbr-fonts-style display-1"><strong>01. Acoustic Fingerprint of the Vehicle</strong></span>
-          </div>
+        <div class="title col-md-12 col-lg-10"><span>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>01. Acoustic Fingerprint of the Vehicle</strong></h4>
+        </span>
         </div>
       </div>
     </div>
