--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -465,7 +465,7 @@
                 <strong>Directs</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
-                Manually arranging the setup based on heuristics. Those methods will not be further detailed because microphone and loudspeaker layouts are interdependent
+                Manually arranging the setup based on heuristics. Will not be further detailed because microphone and loudspeaker layouts are interdependent
               </p>
             </div>
           </div>
