--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -495,7 +495,7 @@
                 <strong>Non-parametric</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
-                Linear transformation such as ambisonic. Input channels are encoded in the spherical harmonic
+                Linear transformation such as ambisonic. Input channels are encoded in the spherical harmonic. Free loudspeaker layouts
               <br>
             </p>
             </div>
