--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -515,21 +515,17 @@
     </div>
   </section>
 
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stage2">
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-8">
-          <h3>Stage 2: Studies over the Virtual Acoustic environment</h3>
-          <br>
-          <p class="mbr-text mbr-fonts-style display-7">
-
-          </p>
+        <div class="title col-md-12 col-lg-10"><span>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>02. Virtual Acoustic Environment</strong></h4>
+        </span>
         </div>
       </div>
     </div>
   </section>
-
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="anal_cabin">
@@ -537,15 +533,6 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg">
           <h5>Analysis of the Cabin Acoustic environment</h5>
-          <br>
-          <p class="mbr-text mbr-fonts-style display-7">
-            The statistical analysis approach starts from the fact that the energy in a space is distributed ergotically, i.e. without particular internal organisations.
-            The description of an acoustic response in these terms uses quantities that summarize the space in a macroscopic way and define certain properties.
-            <br>
-            <br>
-            The ISO 3382 standards describe the measurement procedure, the instrumentation necessary for detection,
-            the number of measurement positions and the criterion for evaluating the collected data.
-          </p>
         </div>
       </div>
     </div>
