--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -545,7 +545,7 @@
   <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n">
       <div class="container">
           <div class="row justify-content-center">
-              <div class="col-12 col-lg-6">
+              <div class="col-sm">
                   <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                       <div class="card mb-3">
                           <div class="card-header" role="tab" id="headingOne">
@@ -644,6 +644,105 @@
                           </div>
                       </div>
                   </div>
+                  <div class="col-sm">
+                      <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                          <div class="card mb-3">
+                              <div class="card-header" role="tab" id="headingOne">
+                                  <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_19" aria-expanded="false" aria-controls="collapse1">
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How to create more items in this list?</strong>
+                                      </h6>
+                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                  </a>
+                              </div>
+                              <div id="collapse1_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
+                                  <div class="panel-body">
+                                      <p class="mbr-fonts-style panel-text display-4">The number of items is limited in this block. Open
+                                          the Block parameters to change the amount of items.</p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="card mb-3">
+                              <div class="card-header" role="tab" id="headingOne">
+                                  <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_19" aria-expanded="false" aria-controls="collapse2">
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Mobirise Kit?
+                                          </strong></h6>
+                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                  </a>
+                              </div>
+                              <div id="collapse2_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
+                                  <div class="panel-body">
+                                      <p class="mbr-fonts-style panel-text display-4">
+                                          Mobirise Kit is a service that provides the access to all current and new
+                                          themes/extensions developed by Mobirise. New themes/extensions are released every
+                                          month and will be available in your account during your plan period, without any
+                                          additional charge.</p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="card mb-3">
+                              <div class="card-header" role="tab" id="headingOne">
+                                  <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_19" aria-expanded="false" aria-controls="collapse3">
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Can I create sites for commerical
+                                              projects?</strong></h6>
+                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                  </a>
+                              </div>
+                              <div id="collapse3_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
+                                  <div class="panel-body">
+                                      <p class="mbr-fonts-style panel-text display-4">
+                                          Yes, Mobirise is free for both non-profit and commercial sites.</p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="card mb-3">
+                              <div class="card-header" role="tab" id="headingOne">
+                                  <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_19" aria-expanded="false" aria-controls="collapse4">
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Code Editor?</strong></h6>
+                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                  </a>
+                              </div>
+                              <div id="collapse4_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
+                                  <div class="panel-body">
+                                      <p class="mbr-fonts-style panel-text display-4">
+                                          This extension allows editing the code of block in the app. Also, it's possible to
+                                          add code to the head and body parts of pages.</p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="card mb-3">
+                              <div class="card-header" role="tab" id="headingOne">
+                                  <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_19" aria-expanded="false" aria-controls="collapse5">
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Mobirise Kit?
+                                          </strong></h6>
+                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                  </a>
+                              </div>
+                              <div id="collapse5_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
+                                  <div class="panel-body">
+                                      <p class="mbr-fonts-style panel-text display-4">
+                                          Mobirise Kit is a service that provides the access to all current and new
+                                          themes/extensions developed by Mobirise. New themes/extensions are released every
+                                          month and will be available in your account during your plan period, without any
+                                          additional charge.</p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="card mb-3">
+                              <div class="card-header" role="tab" id="headingOne">
+                                  <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse6_19" aria-expanded="false" aria-controls="collapse6">
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Can I create sites for commerical
+                                              projects?</strong></h6>
+                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                  </a>
+                              </div>
+                              <div id="collapse6_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
+                                  <div class="panel-body">
+                                      <p class="mbr-fonts-style panel-text display-4">
+                                          Yes, Mobirise is free for both non-profit and commercial sites.</p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
               </div>
           </div>
       </div>
