--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -531,17 +531,7 @@
     </div>
   </section>
 
-  <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="anal_cabin">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-12 col-lg">
-          <h5>Analysis of the Cabin Acoustic environment</h5>
-        </div>
-      </div>
-    </div>
-  </section>
-
+<!-- Accordion-->
   <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n">
       <div class="container">
           <div class="row justify-content-center">
