--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -538,22 +538,21 @@
                       <div class="card mb-3">
                           <div class="card-header" role="tab" id="headingOne">
                               <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_19" aria-expanded="false" aria-controls="collapse1">
-                                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>How to create more items in this list?</strong>
+                                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>RT60 (Reverberation Time)</strong>
                                   </h6>
                                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
                               </a>
                           </div>
                           <div id="collapse1_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                               <div class="panel-body">
-                                  <p class="mbr-fonts-style panel-text display-4">The number of items is limited in this block. Open
-                                      the Block parameters to change the amount of items.</p>
+                                  <p class="mbr-fonts-style panel-text display-4">Time required for the impulse response to decay by 60 dB.</p>
                               </div>
                           </div>
                       </div>
                       <div class="card mb-3">
                           <div class="card-header" role="tab" id="headingOne">
                               <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_19" aria-expanded="false" aria-controls="collapse2">
-                                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Mobirise Kit?
+                                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>EDT (Early Decay Time)
                                       </strong></h6>
                                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
                               </a>
@@ -561,10 +560,7 @@
                           <div id="collapse2_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                               <div class="panel-body">
                                   <p class="mbr-fonts-style panel-text display-4">
-                                      Mobirise Kit is a service that provides the access to all current and new
-                                      themes/extensions developed by Mobirise. New themes/extensions are released every
-                                      month and will be available in your account during your plan period, without any
-                                      additional charge.</p>
+                                    Reference time of the first reflections.</p>
                               </div>
                           </div>
                       </div>
