--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -464,7 +464,7 @@
                 <img src="https://www.gabrielavelitch.com/img/site/empiric.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                <strong>Directs</strong>
+                <strong>Direct</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
                 Manually arranging the setup based on heuristics. Will not be further detailed because microphone and loudspeaker layouts are interdependent
