--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -461,7 +461,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/empiric.svg" style="width:70%; display: inline; align-items: center">
+                <img src="https://www.gabrielavelitch.com/img/site/heart.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Direct</strong>
