--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -567,37 +567,35 @@
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_19" aria-expanded="false" aria-controls="collapse3">
-                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Can I create sites for commerical
-                      projects?</strong></h6>
+                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>ITDG (Initial Time Delay Gap)</strong></h6>
                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse3_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                 <div class="panel-body">
                   <p class="mbr-fonts-style panel-text display-4">
-                    Yes, Mobirise is free for both non-profit and commercial sites.</p>
+                    Delay time of the first reflection, i.e. the time between the direct sound and the first reflection. Assuming of course that there is direct sound. The optimal values ​​for the ITDG vary depending on the space. Typically for speech, an ITDG of less than 50ms is preferred. Magic value for ITDG is around 30 ms.</p>
                 </div>
               </div>
             </div>
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_19" aria-expanded="false" aria-controls="collapse4">
-                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Code Editor?</strong></h6>
+                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Haas effect</strong></h6>
                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse4_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                 <div class="panel-body">
                   <p class="mbr-fonts-style panel-text display-4">
-                    This extension allows editing the code of block in the app. Also, it's possible to
-                    add code to the head and body parts of pages.</p>
+                    If the contributions to the direct sound arrive within 35 ms, therefore the ITDG is equal to or less than this value, all contents are integrated as part of the direct sound. These events are incorporated as the same sound event. If the contributions arrive after an interval of about 80 ms, the uniformity of a sound is broken and we hear the echo. This size is very important, because it is one of those parameters called intimacy. Above a certain value we will have the sensation of a larger environment. From a qualitative point of view, it is important that the first reflections come from the side walls to have a greater pleasantness of the space. This is called lateral asymmetry or interaural coherence.</p>
                 </div>
               </div>
             </div>
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_19" aria-expanded="false" aria-controls="collapse5">
-                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>What is Mobirise Kit?
+                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>BR (Bass Ratio)
                     </strong></h6>
                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
                 </a>
@@ -605,25 +603,21 @@
               <div id="collapse5_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                 <div class="panel-body">
                   <p class="mbr-fonts-style panel-text display-4">
-                    Mobirise Kit is a service that provides the access to all current and new
-                    themes/extensions developed by Mobirise. New themes/extensions are released every
-                    month and will be available in your account during your plan period, without any
-                    additional charge.</p>
+                    It expresses a relationship between reverberation times taken at specific frequencies. This value gives us indications of the fullness of the sound in the medium-low register. Typically the best rooms are those that have a BR between 1.2 and 1.25. (BR = RT(125Hz) + RT(250Hz) / RT(500Hz) + RT(1kHz))</p>
                 </div>
               </div>
             </div>
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
                 <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse6_19" aria-expanded="false" aria-controls="collapse6">
-                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Can I create sites for commerical
-                      projects?</strong></h6>
+                  <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Brilliance</strong></h6>
                   <span class="sign mbr-iconfont mbri-arrow-down"></span>
                 </a>
               </div>
               <div id="collapse6_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_19">
                 <div class="panel-body">
                   <p class="mbr-fonts-style panel-text display-4">
-                    Yes, Mobirise is free for both non-profit and commercial sites.</p>
+                    It has a similar definition to BR but on different frequencies. Brilliance = RT(500Hz) + RT(1kHz) / RT(2kHz) + RT(4kHz) Brilliance and Bass Ratio describe the brightness of the environment on an acoustic level, i.e. how much medium-low and medium-high contribution there is. These two parameters are obviously linked to the materials of the space. Very smooth and rigid materials increase the Brilliance parameters, while wood contributes to BR. Wood has the ability to preserve the medium-low region of the spectrum (depending on the essence and finish of the wood it changes a lot for the resonator qualities). These two parameters are evaluated for acoustic adaptation works.</p>
                 </div>
               </div>
             </div>
