--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -533,7 +533,7 @@
   <section data-bs-version="5.1" class="content16 cid-tX8Gfky3Og" id="content16-n">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-12 col-md-6">
+        <div class="col-sm">
           <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
             <div class="card mb-3">
               <div class="card-header" role="tab" id="headingOne">
@@ -621,7 +621,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-sm">
               <div id="bootstrap-accordion_19" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                 <div class="card mb-3">
                   <div class="card-header" role="tab" id="headingOne">
